2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	readded (better) code to deal with full menu paths.

2007-05-16  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbrushtool.c (gimp_brush_tool_constructor): add a
	local GimpDisplayConfig variable to improve readability.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mblur.c: applied patch from Jörg Gittinger that
	improves the quality of the Motion Blur filter (bug #380435).

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	removed code that used to deal with full menu paths. All our
	scripts use script-fu-menu-register now.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/selection-round.scm
	* plug-ins/script-fu/scripts/copy-visible.scm: unmarked strings for
	translation.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (tile_invalidate): if the invalidated
	tile is the cached tile, release the cached tile. Fixes bug #438802.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_sensitive):
	apply sensitivity state to the Cancel button as well.
	(gimp_file_dialog_progress_start): make the Cancel button sensitive
	if the progress is cancelable.

	* app/widgets/gimpthumbbox.c (gimp_thumb_box_progress_start): if
	embedded in a GimpFileDialog, make its Cancel button sensitive if
	the progress is cancelable

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpthumbbox.[ch]: combined the two progress bars
	(when loading multiple thumbnails) into a single one using a
	GimpSubProgress.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/jpeg/jpeg-load.c: reduced number of progress updates.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c (script_fu_extension_init):
	renamed "Utils" to "Utilities".
