@@ -1,3 +1,11 @@
+2007-05-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpthumbbox.c
+	* libgimp/gimpprogressbar.c
+	* plug-ins/script-fu/script-fu-interface.c: use Gtk functions to
+	manually iterate the main loop because they release the Gdk lock
+	correctly around calling the GLib main loop functions.
+
 2007-05-16  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
